implement login/register login (not finished)
